--- a/gb/25/7/21/n14556867.md
+++ b/gb/25/7/21/n14556867.md
@@ -31,18 +31,12 @@
 <p>&nbsp;</p>
 <p style="padding-left: 160px;">责任编辑：林芳宇@</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325630.md#1">神州登临（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/16/n14510644.md#1">五律：此情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538429.md#1">五律：应时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540673.md#1">五律：当前</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541896.md#1">五律：紫云</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541897.md#1">五律：大千（三首）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546253.md#1">五律：黄尘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548493.md#1">五律：七月</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548494.md#1">五律：时物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551339.md#1">五律：大穹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10515170.md#1" target="_blank">林辉：蔡元培东床快婿的惨痛人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
